PR/50983: David Shao: Protect stddef; also make the pointer void *.